Implement Tarjan Algorithm an added solution for LeetCode 1932